# ISGA_ML_Package

./: LICENSE  README.md  pyproject.toml  setup.py
makeitlearn_isga.egg-info/: PKG-INFO  SOURCES.txt
src/ISGA_ML_Package_achrafmataich/: ISGA_ML.PY
