[build-system]
requires = ["hatchling", "pandas", "numpy"]
build-backend = "hatchling.build"

[project]
name = "ISGA_ML_Package_achrafmataich"
version = "2.0.1"
authors = [
  { name="Achraf Mataich", email="achraf.mataich@outlook.com" },
]
description = "A package for ML of ISGA FES"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/achrafmataich/ISGA_ML_Package"